fix name overflow and deck loading

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,7 +53,7 @@ iframe{
   }
 }
 .custom-tab {
-  font-size: small;
+  font-size: smaller;
 }
 .cost-badge {
   margin-left: 20px;
